--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <title></title>
   <meta name="viewport" content="width=device=width, initial-scale=1.0">
- </head>
+  <link href="style.css" rel="stylesheet" type="text/css"> 
+</head>
 <body>
  <h1>Home</h1>
  <p> </p>
